--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-alembic==1.0.10
+alembic==1.0.11
 Babel==2.7.0
 blinker==1.4
 certifi==2019.6.16
@@ -19,12 +19,14 @@ guess-language-spirit==0.5.3
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
-Mako==1.0.12
+Mako==1.0.13
 MarkupSafe==1.1.1
 PyJWT==1.7.1
 python-dateutil==2.8.0
 python-dotenv==0.10.3
 python-editor==1.0.4
+python-engineio==3.8.2
+python-socketio==4.2.0
 pytz==2019.1
 redis==3.2.1
 requests==2.22.0
