--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,35 @@
-alembic==1.0.11
-Babel==2.7.0
+alembic==0.9.6
+Babel==2.5.1
 blinker==1.4
-certifi==2019.6.16
+certifi==2017.7.27.1
 chardet==3.0.4
-Click==7.0
-dominate==2.3.5
-elasticsearch==7.0.2
-Flask==1.0.3
-Flask-Babel==0.12.2
+click==6.7
+dominate==2.3.1
+elasticsearch==6.1.1
+Flask==1.0.2
+Flask-Babel==0.11.2
 Flask-Bootstrap==3.3.7.1
-Flask-Login==0.4.1
+Flask-Login==0.4.0
 Flask-Mail==0.9.1
-Flask-Migrate==2.5.2
-Flask-Moment==0.8.0
-Flask-SQLAlchemy==2.4.0
+Flask-Migrate==2.1.1
+Flask-Moment==0.5.2
+Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
-guess-language-spirit==0.5.3
-idna==2.8
-itsdangerous==1.1.0
-Jinja2==2.10.1
-Mako==1.0.13
-MarkupSafe==1.1.1
-PyJWT==1.7.1
-python-dateutil==2.8.0
-python-dotenv==0.10.3
-python-editor==1.0.4
-python-engineio==3.8.2
-python-socketio==4.2.0
-pytz==2019.1
-redis==3.2.1
-requests==2.22.0
-six==1.12.0
-SQLAlchemy==1.3.5
-urllib3==1.25.3
+guess_language-spirit==0.5.3
+idna==2.6
+itsdangerous==0.24
+Jinja2==2.10
+Mako==1.0.7
+MarkupSafe==1.0
+PyJWT==1.5.3
+python-dateutil==2.6.1
+python-dotenv==0.7.1
+python-editor==1.0.3
+pytz==2017.2
+requests==2.18.4
+six==1.11.0
+SQLAlchemy==1.1.14
+urllib3==1.22
 visitor==0.1.3
-Werkzeug==0.15.4
-WTForms==2.2.1
+Werkzeug==0.14.1
+WTForms==2.1
