--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,9 @@ python-dateutil==2.8.0
 python-dotenv==0.10.3
 python-editor==1.0.4
 pytz==2019.1
+redis==3.2.1
 requests==2.22.0
+rq==1.1.0
 six==1.12.0
 SQLAlchemy==1.3.5
 urllib3==1.25.3
