--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ Jinja2==2.10.1
 Mako==1.0.13
 MarkupSafe==1.1.1
 PyJWT==1.7.1
+PyMySQL==0.9.3
 python-dateutil==2.8.0
 python-dotenv==0.10.3
 python-editor==1.0.4
