--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@ blinker==1.4
 certifi==2019.6.16
 chardet==3.0.4
 Click==7.0
+colorama==0.4.1
 dominate==2.3.5
 elasticsearch==7.0.2
 Flask==1.1.1
 Flask-Babel==0.12.2
 Flask-Bootstrap==3.3.7.1
+Flask-HTTPAuth==3.3.0
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.5.2
@@ -16,11 +18,13 @@ Flask-Moment==0.8.0
 Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
 guess-language-spirit==0.5.3
+httpie==1.0.2
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 Mako==1.0.13
 MarkupSafe==1.1.1
+Pygments==2.4.2
 PyJWT==1.7.1
 PyMySQL==0.9.3
 python-dateutil==2.8.0
